# mragent

./: .gitignore  README.md  config.json  llmwrapper.py  main.py  pyproject.toml  test_llmwrapper.py
agent/: agent.py
memory/: controller.py  graph.py
